--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
                 </td>
             </tr>
         </tbody></table>
+        <div>
+            <p>
+            // respuesta.estado=0 todabia no cargo respuesta 
+//respuesta.estado=1 api rechasada
+//respuesta.estado=2 api aceptada
+//respuesta.saldoTotal=saldo total
+// respuesta.saldodisponible=saldo disponible
+            </p>
+        
+        </div>
     </form>
 
     <script src="app.js"></script>
