--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
     <button>Comprobar</button>
 </div>
 </fieldset>
+    
+       <div>
+            <p>
+            // respuesta.estado=0 todabia no cargo respuesta 
+//respuesta.estado=1 api rechasada
+//respuesta.estado=2 api aceptada
+//respuesta.saldoTotal=saldo total
+// respuesta.saldodisponible=saldo disponible
+            </p>
+        
+        </div>
  
     <script src="consultaKeys.js"></script>
 </body>
